begun refactoring aboutToSubmit code